<resources>
    <string name="app_name">FoodControl</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="restaurant">Restaurant</string>
    <string name="ratting">Rating</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="num_address">Number</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="add_image">Add Image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_inform">Inform permission for internal storage</string>
    <string name="shared">Share</string>
    <string name="initial_shared_body">(Food Control - Google Play Store) \n\n Informations: \n\n</string>
    <string name="chosser_title">Shared whit</string>
    <string name="about_shared">Powered By: Fiapers Desenolvimento</string>
    <string name="extra_subject">"Information about: "</string>
    <string name="call">Call</string>
    <string name="title_activity_home">Food Control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Exit</string>
    <string name="close_app">Close app</string>
    <string name="logout">Logout</string>
    <string name="configuration">Configuration</string>
    <string name="list_food_activity">List of Restaurants</string>
    <string name="food_activity">Add new Restaurant</string>
    <string name="about_activity">About</string>
    <string name="backbutton">Back</string>
    <string name="menu_title">Menu - Food Control</string>
    <string name="password">Password</string>
    <string name="e_mail">e-mail</string>
    <string name="create_an_account">Create an Account</string>
    <string name="login">Login</string>
    <string name="toast_validate_restaurant">Field Restaurant must have a value!</string>
    <string name="toast_error_create_user">Error creating user.</string>
    <string name="toast_success_create_user">User created successfully!</string>
    <string name="notification_button">Yes</string>
    <string name="mewuser">New User</string>
    <string name="name">Name</string>
    <string name="toast_error_login">The email address that you\'ve entered doesn\'t match any account. Sign up for an
        account.
    </string>
    <string name="toast_email_login">Field E-mail is blank!</string>
    <string name="toast_password_login">Field Password is blank!</string>
    <string name="toast_name_sign_up">Field Name is blank!</string>
</resources>
