<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_list_food"
                android:icon="@drawable/ic_menu_list_food"
                android:title="@string/list_food_activity"/>
        <item
                android:id="@+id/nav_add_food"
                android:icon="@drawable/ic_menu_add_food"
                android:title="@string/food_activity"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about_activity"/>
    </group>

    <item android:title="@string/configuration">
        <menu>
            <item
                    android:id="@+id/nav_close"
                    android:icon="@drawable/ic_menu_close"
                    android:title="@string/close_app"/>
        </menu>
    </item>

</menu>
